using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Common.Enums
{
    /// <summary>
    /// Enum for the different travel methods of users (in tourlogs it is specified how the user travelled. e.g.: Hiking tour, Bike tour, ...).
    /// </summary>
    public enum ETravelMethod
    {
        RUNNING,
        HIKING,
        BIKING
    }
}
