using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Common.Enums
{
    /// <summary>
    /// Enum for the weather of tour logs.
    /// </summary>
    public enum EWeather
    {
        SUNNY,
        RAINY,
        CLOUDY,
        HAIL,
        SNOWY,
        STORMY
    }
}
